# smol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-smol.yml  release.yml  sdk-ci.yml
docs/: cli.md  unified-machine-cli.md
examples/rl-rollouts/: .gitignore  README.md  agents.py  harness.py  prod_fork_scale.py  requirements.txt  run_scale_test.py  world.py
scripts/: build-smol-dist-windows.sh  build-smol-dist.sh  check-versions.sh  cut-release.sh  install.ps1  install.sh  smol-wrapper.sh
sdk/node/: .gitignore  Cargo.toml  README.md  assets.ts  binding.d.ts  binding.js  build.rs  errors.ts  index.ts  machine.ts  native.ts  package-lock.json  package.json  transport.ts  tsconfig.json  types.ts
sdk/node/examples/: basic.ts
sdk/node/openapi/: smolfleet.json
sdk/node/scripts/: bundle-native.sh  gen-openapi.sh
sdk/node/src/: machine.rs  types.rs
sdk/node/test/: cloud-leak.ts  cloud-mock.ts  cloud-real.ts  cloud-start-error.ts  e2e.ts  gpu-e2e.ts  stream.ts  unit.ts
sdk/python/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
sdk/python/python/smol/: __init__.py  async_machine.py  errors.py  machine.py  transport.py  types.py
sdk/python/scripts/: bundle-native.sh
sdk/python/src/: lib.rs
sdk/python/tests/: test_async_mock.py  test_cloud_leak.py  test_cloud_mock.py  test_cloud_real.py  test_cloud_start_error.py  test_error_codes_e2e.py  test_local_e2e.py  test_mounts_e2e.py  test_stream_e2e.py  test_unit.py
src/: main.rs
src/commands/: auth.rs  auth_status.rs  cloud.rs  common.rs  compose.rs  config.rs  cp.rs  create.rs  data_dir.rs  deploy.rs  destroy.rs  docker.rs  down.rs  exec.rs  file.rs  fork.rs  images.rs  init.rs  inspect.rs  login.rs  logout.rs  logs.rs  ls.rs  machine.rs  machines.rs  mod.rs  monitor.rs  pack.rs  prune.rs  pull.rs  push.rs  registry.rs  resolve.rs  rm.rs  run.rs  scale.rs  start.rs  status.rs  stop.rs  up.rs  (+1 more)
