[workspace]
# The SDK's native addon (smol/sdk/node) is its own crate, not part of this CLI
# workspace. `__engine__` is the smolvm engine checkout the release workflow
# drops in (path deps repoint there); it's its OWN workspace, so it must be
# excluded or cargo errors with "multiple workspace roots in the same workspace".
exclude = ["sdk", "__engine__"]

[package]
name = "smol-cli"
# Tracks the bundled smolvm engine release: a `smol` vX.Y.Z ships smolvm vX.Y.Z's
# libkrun + agent-rootfs, so the host CLI and guest agent can never drift.
version = "1.4.0"
edition = "2021"
description = "Ship and run software with isolation by default"
license = "Apache-2.0"
repository = "https://github.com/smol-machines/smol"
homepage = "https://smolmachines.com"
readme = "README.md"
keywords = ["microvm", "sandbox", "isolation", "container", "vm"]
categories = ["command-line-utilities", "virtualization"]

[[bin]]
name = "smol"
path = "src/main.rs"

[dependencies]
# smolvm engine — VM lifecycle, agent protocol, config
smolvm = { path = ".." }
smolvm-pack = { path = "../crates/smolvm-pack" }

# CLI
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tempfile = "3"
dirs = "5"
smolvm-protocol = { path = "../crates/smolvm-protocol" }
smolvm-registry = { path = "../crates/smolvm-registry" }
# rustls (not native-tls) so the build pulls no openssl-sys — which keeps the
# Linux zigbuild cross-compile pure-Rust (no system OpenSSL headers). Matches the
# engine's smolvm-registry, so reqwest's features unify on rustls across the tree.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# Adapts a tokio file reader into a byte stream for streamed cloud `cp` uploads
# (so a large file is never read wholly into RAM). `io` feature = ReaderStream.
tokio-util = { version = "0.7", features = ["io"] }
# WebSocket client for interactive cloud exec/shell (rustls so the cross-compile
# stays openssl-free, matching reqwest above).
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
# Pin the rustls CryptoProvider for tokio-tungstenite's TLS (see main()).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
chrono = { version = "0.4", features = ["serde"] }
open = "5"
base64 = "0.22"
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
